--- a/27 - Click and Drag/style.css
+++ b/27 - Click and Drag/style.css
@@ -66,5 +66,6 @@ body {
 .item:nth-child(9n+8) { background: darkslateblue;}
 .item:nth-child(9n+9) { background: rebeccapurple;}
 
+/* 用scaleX與rotateY搭配使移動時有3D效果 */
 .item:nth-child(even) { transform: scaleX(1.31) rotateY(40deg); }
 .item:nth-child(odd) { transform: scaleX(1.31) rotateY(-40deg); }
